--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,13 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;1,400;1,500&display=swap");
-
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-/* ---- INDEX ---- */
-
 /*-----HEADER-----*/
 header {
-  background-image: radial-gradient(
-    circle at 7.42% 53.73%,
-    #edda67 0,
-    #efcf59 16.67%,
-    #f1c24a 33.33%,
-    #f2b53c 50%,
-    #f3a72f 66.67%,
-    #f59925 83.33%,
-    #f78b1e 100%
-  );
+  background-image: radial-gradient(circle at 7.42% 53.73%, #edda67 0, #efcf59 16.67%, #f1c24a 33.33%, #f2b53c 50%, #f3a72f 66.67%, #f59925 83.33%, #f78b1e 100%);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -29,17 +17,14 @@ header {
   top: 0;
   z-index: 1;
 }
-
-.logo {
+header a .logo {
   width: 400px;
   height: 100px;
 }
-
 header nav ul {
   list-style: none;
   display: flex;
 }
-
 header nav ul li a {
   margin: 20px;
   text-decoration: none;
@@ -50,8 +35,36 @@ header nav ul li a {
   font-weight: 500;
 }
 
-/*-----MAIN-----*/
+/*-----FOOTER-----*/
+.footer {
+  width: 100%;
+  height: 18vh;
+  background-image: radial-gradient(circle at 7.42% 53.73%, #edda67 0, #efcf59 16.67%, #f1c24a 33.33%, #f2b53c 50%, #f3a72f 66.67%, #f59925 83.33%, #f78b1e 100%);
+}
+.footer div ul {
+  list-style: none;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 6px;
+}
+.footer div ul h2 {
+  text-align: left;
+  margin-top: 10px;
+  padding: 6px;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: 500;
+  justify-content: start;
+}
+.footer div ul li a {
+  text-decoration: none;
+  color: black;
+}
 
+/* ---- INDEX ---- */
+/*-----MAIN-----*/
 .hero {
   background-image: url("../img/portada.jpg");
   width: 100%;
@@ -65,14 +78,12 @@ header nav ul li a {
   align-items: center;
   flex-direction: column;
 }
-
 .hero h1 {
   font-size: 50px;
   background-color: rgba(0, 0, 0, 0.301);
   color: white;
   padding: 30px;
 }
-
 .hero p {
   font-size: 15px;
   background-color: rgba(0, 0, 0, 0.301);
@@ -90,29 +101,20 @@ header nav ul li a {
   align-items: center;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
-.imglogydist {
+.logydist .imglogydist {
   width: 480px;
   height: 320px;
 }
-
-.compromiso {
+.logydist .compromiso {
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   font-size: 25px;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  font-weight: 500;
 }
-
-.compromiso p {
+.logydist .compromiso p {
   padding: 20px;
   margin-top: 20px;
-}
-
-.logydist p {
   font-size: 20px;
   color: black;
   font-family: "Roboto", sans-serif;
@@ -137,52 +139,7 @@ header nav ul li a {
   background-color: rgba(255, 220, 95, 0.687);
 }
 
-/*-----FOOTER-----*/
-
-.footer {
-  width: 100%;
-  height: 18vh;
-  background-image: radial-gradient(
-    circle at 7.42% 53.73%,
-    #edda67 0,
-    #efcf59 16.67%,
-    #f1c24a 33.33%,
-    #f2b53c 50%,
-    #f3a72f 66.67%,
-    #f59925 83.33%,
-    #f78b1e 100%
-  );
-}
-
-.footer ul {
-  list-style: none;
-}
-
-.footer ul li a {
-  text-decoration: none;
-  color: black;
-}
-
-.footer h2 {
-  text-align: left;
-  margin-top: 10px;
-  padding: 6px;
-  font-size: 20px;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  font-weight: 500;
-  justify-content: start;
-}
-
-.footer div ul {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  padding: 6px;
-}
-
 /* ---- SERVICIOS ---- */
-
 .servicios {
   text-align: center;
   margin-top: 10px;
@@ -193,18 +150,12 @@ header nav ul li a {
   font-weight: 500;
   justify-content: start;
 }
-
-.servicios div img {
-  width: 200px;
-  height: 200px;
-}
-
 .servicios div {
   border: 1px solid black;
   width: 205px;
   height: 300px;
   text-align: center;
-  background-color: #ffa60d84;
+  background-color: rgba(255, 166, 13, 0.5176470588);
   font-size: 20px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
@@ -214,10 +165,36 @@ header nav ul li a {
   display: inline-block;
   transition: 1s;
 }
-
 .servicios div:hover {
   transform: scale(1.1);
   box-shadow: 10px 10px 20px -6px rgba(0, 0, 0, 0.852);
+}
+.servicios div img {
+  width: 200px;
+  height: 200px;
+}
+.servicios div {
+  border: 1px solid black;
+  width: 205px;
+  height: 300px;
+  text-align: center;
+  background-color: rgba(255, 166, 13, 0.5176470588);
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: 500;
+  text-align: center;
+  margin: 20px;
+  display: inline-block;
+  transition: 1s;
+}
+.servicios div:hover {
+  transform: scale(1.1);
+  box-shadow: 10px 10px 20px -6px rgba(0, 0, 0, 0.852);
+}
+.servicios div img {
+  width: 200px;
+  height: 200px;
 }
 
 .flota {
@@ -231,18 +208,12 @@ header nav ul li a {
   justify-content: start;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
-.flota div img {
-  width: 250px;
-  height: 250px;
-}
-
 .flota div {
   border: 1px solid black;
   width: 250px;
   height: 300px;
   text-align: center;
-  background-color: #ffa60d84;
+  background-color: rgba(255, 166, 13, 0.5176470588);
   font-size: 20px;
   font-family: "Roboto", sans-serif;
   font-style: italic;
@@ -252,16 +223,64 @@ header nav ul li a {
   display: inline-block;
   transition: 1s;
 }
-
 .flota div:hover {
   transform: scale(1.1);
   box-shadow: 10px 10px 20px -6px rgba(0, 0, 0, 0.852);
+}
+.flota div img {
+  width: 250px;
+  height: 250px;
+}
+.flota div {
+  border: 1px solid black;
+  width: 250px;
+  height: 300px;
+  text-align: center;
+  background-color: rgba(255, 166, 13, 0.5176470588);
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: 500;
+  text-align: center;
+  margin: 20px;
+  display: inline-block;
+  transition: 1s;
+}
+.flota div:hover {
+  transform: scale(1.1);
+  box-shadow: 10px 10px 20px -6px rgba(0, 0, 0, 0.852);
+}
+.flota div img {
+  width: 250px;
+  height: 250px;
+}
+.flota div {
+  border: 1px solid black;
+  width: 250px;
+  height: 300px;
+  text-align: center;
+  background-color: rgba(255, 166, 13, 0.5176470588);
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: 500;
+  text-align: center;
+  margin: 20px;
+  display: inline-block;
+  transition: 1s;
+}
+.flota div:hover {
+  transform: scale(1.1);
+  box-shadow: 10px 10px 20px -6px rgba(0, 0, 0, 0.852);
+}
+.flota div img {
+  width: 250px;
+  height: 250px;
 }
 
 .otros {
   margin-bottom: 10px;
 }
-
 .otros h2 {
   text-align: start;
   margin-top: 10px;
@@ -273,24 +292,14 @@ header nav ul li a {
   justify-content: start;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
-.reembolsoimg {
+.otros .reembolsoimg {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   background-color: rgba(255, 220, 95, 0.687);
   flex-direction: row;
 }
-
-.mudanzaimg {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-  background-color: rgba(255, 220, 95, 0.687);
-  flex-direction: row;
-}
-
-.contrareembolso {
+.otros .contrareembolso {
   display: flex;
   justify-content: left;
   align-items: center;
@@ -300,8 +309,14 @@ header nav ul li a {
   font-style: italic;
   font-weight: 500;
 }
-
-.mudanza {
+.otros .mudanzaimg {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  background-color: rgba(255, 220, 95, 0.687);
+  flex-direction: row;
+}
+.otros .mudanza {
   display: flex;
   justify-content: left;
   align-items: center;
@@ -313,7 +328,6 @@ header nav ul li a {
 }
 
 /* ---- CONTACTOS ---- */
-
 .fondocontactos {
   background-image: url(../img/fondo\ contactos.jpg);
   width: 100%;
@@ -327,7 +341,6 @@ header nav ul li a {
   align-items: center;
   flex-direction: column;
 }
-
 .fondocontactos h1 {
   font-size: 50px;
   background-color: rgba(0, 0, 0, 0.301);
@@ -342,16 +355,6 @@ header nav ul li a {
   align-items: center;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
-.sectioncontactos h1 {
-  font-size: 20px;
-  font-family: "Roboto", sans-serif;
-  font-style: italic;
-  font-weight: 500;
-  box-sizing: border-box;
-  padding: 10px;
-}
-
 .sectioncontactos h2 {
   font-size: 20px;
   font-family: "Roboto", sans-serif;
@@ -372,7 +375,6 @@ header nav ul li a {
 }
 
 /* ---- QUIENES ---- */
-
 .fondoquienes {
   background-image: url("../img/fondoquienes.jpg");
   width: 100%;
@@ -386,7 +388,6 @@ header nav ul li a {
   align-items: center;
   flex-direction: column;
 }
-
 .fondoquienes h1 {
   font-size: 50px;
   background-color: rgba(0, 0, 0, 0.301);
@@ -406,18 +407,12 @@ header nav ul li a {
   padding: 10px;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
 .brindandop h2 {
   margin-bottom: 10px;
 }
-
 .brindandop p {
   font-size: 15px;
   text-align: justify;
-}
-
-.valoresprincipales {
-  background-color: rgba(255, 220, 95, 0.687);
 }
 
 .principiosyvisiones {
@@ -426,13 +421,10 @@ header nav ul li a {
   margin-bottom: 10px;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
-.principiosyvisiones img {
-  float: left;
+.principiosyvisiones .valoresprincipales {
   background-color: rgba(255, 220, 95, 0.687);
 }
-
-.principiosyvisiones h3 {
+.principiosyvisiones .valoresprincipales h3 {
   text-align: center;
   justify-content: center;
   align-items: center;
@@ -445,13 +437,13 @@ header nav ul li a {
   background-color: rgba(255, 220, 95, 0.687);
   box-sizing: border-box;
 }
-
-.imgvisionmv {
+.principiosyvisiones .valoresprincipales .principios .imgvisionmv {
+  float: left;
+  background-color: rgba(255, 220, 95, 0.687);
   width: 480px;
   height: 320px;
 }
-
-.miviva {
+.principiosyvisiones .valoresprincipales .principios .miviva {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -464,21 +456,17 @@ header nav ul li a {
   padding: 10px;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
-.mision {
+.principiosyvisiones .valoresprincipales .principios .miviva .mision {
   margin: 5px;
 }
-
-.vision {
+.principiosyvisiones .valoresprincipales .principios .miviva .vision {
   margin: 5px;
 }
-
-.valores {
+.principiosyvisiones .valoresprincipales .principios .miviva .valores {
   margin: 5px;
 }
 
 /* ---- RRHH ---- */
-
 .fondorrhh {
   background-image: url("../img/rrhh.jpg");
   width: 100%;
@@ -492,7 +480,6 @@ header nav ul li a {
   align-items: center;
   flex-direction: column;
 }
-
 .fondorrhh h1 {
   font-size: 50px;
   background-color: rgba(0, 0, 0, 0.301);
@@ -512,7 +499,17 @@ header nav ul li a {
   padding: 15px;
   background-color: rgba(255, 220, 95, 0.687);
 }
-
+.titulorrhh p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-size: 20px;
+  font-family: "Roboto", sans-serif;
+  font-style: italic;
+  font-weight: 200;
+  padding: 5px;
+}
 .titulorrhh p {
   display: flex;
   justify-content: center;
@@ -530,18 +527,15 @@ header nav ul li a {
 }
 
 /* ---- MEDIA QUERIES ---- */
-
 @media screen and (max-width: 950px) {
   header {
     flex-direction: column;
   }
 }
-
 @media screen and (max-width: 850px) {
   .logydist {
     flex-direction: column;
   }
-
   .miviva {
     font-size: 12px;
     font-weight: 250;
@@ -549,64 +543,53 @@ header nav ul li a {
     padding: 7px;
   }
 }
-
 @media screen and (max-width: 750px) {
   .principiosyvisiones img {
     flex-direction: column;
   }
-
   .fondoquienes {
     background-image: url("../img/fondoquienes.jpg");
     width: 100%;
     height: 50vh;
   }
-
   .fondorrhh {
     background-image: url("../img/rrhh.jpg");
     width: 100%;
     height: 50vh;
   }
-
   .fondocontactos {
     background-image: url(../img/fondo\ contactos.jpg);
     width: 100%;
     height: 50vh;
   }
 }
-
 @media screen and (max-width: 670px) {
   .hero {
     width: 100%;
     height: 50vh;
   }
-
   .hero h1 {
     font-size: 30px;
     padding: 20px;
   }
-
   .hero p {
     font-size: 10clpx;
     margin-top: 6px;
     padding: 15px;
   }
-
   .imgvisionmv {
     width: 350px;
     height: 233px;
   }
-
   .fondorrhh h1 {
     font-size: 40px;
     padding: 20px;
   }
-
   .fondocontactos h1 {
     font-size: 40px;
     padding: 20px;
   }
 }
-
 @media screen and (max-width: 550px) {
   .logo {
     width: 300px;
@@ -617,40 +600,35 @@ header nav ul li a {
     width: 300px;
     padding: 0%;
   }
-
   .compromiso {
     font-size: 20px;
   }
-
   .compromiso p {
     padding: 10px;
     margin-top: 10px;
   }
-
   .logydist p {
     font-size: 15px;
   }
-
   .fondorrhh h1 {
     font-size: 30px;
     padding: 15px;
   }
 }
-
 @media screen and (max-width: 480px) {
   .imglogydist {
     width: 350px;
     height: 233px;
   }
-
   .fondorrhh {
     background-image: url("../img/rrhh.jpg");
     width: 100%;
     height: 40vh;
   }
-
   .fondorrhh h1 {
     font-size: 25px;
     padding: 10px;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
